# mana_combat_demo

./: Cargo.toml  LICENSE.md
assets/: main.tmx  player.aseprite  player.sprite.json
src/: client.rs  main.rs  server.rs  shared.rs
src/helpers/: mod.rs  tiled.rs
src/shared/: components.rs  config.rs  plugin.rs  protocol.rs
src/shared/bundles/: player.rs
src/shared/components/: ability.rs  facing_direction.rs  player_id.rs  position.rs
