[package]
name = "mana_combat_demo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = {version = "0.12.1", features=["dynamic_linking"]}
bevy_ecs_tilemap = { git = "https://github.com/StarArawn/bevy_ecs_tilemap.git", reference="b08a5d997867d5e5a760e296dc38e435c6b268cc" }
thiserror = "1.0.56"
tiled = { git = "https://github.com/mapeditor/rs-tiled.git", reference="c8ac751ee01aee74011c624484baae727a667123"}
